k8s/auth-depl.yml
apiVersion: v1
kind: Service
metadata:
  name: nyte-auth
  namespace: nyte-prod
spec:
  selector:
    app: auth
  ports:
    - name: http
      port: 80
      targetPort: 3000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-v1
  namespace: nyte-prod
  labels:
    app: auth
    version: v1
spec:
  replicas: 80
  selector:
    matchLabels:
      app: auth
      version: v1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: auth
        version: v1
    spec:
      serviceAccountName: nyte-auth
      containers:
        - name: auth
          image: <container image url>
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              protocol: TCP
