k8s/auth-gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: auth-nytesoftware-com-gateway
  namespace: nyte-prod
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: auth-nytesoftware-com-tls
      hosts:
        - "auth.nytesoftware.com"
    - port:
        number: 80
        name: http
        protocol: HTTP
      tls:
        httpsRedirect: true
      hosts:
        - "auth.nytesoftware.com"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: auth-nytesoftware-com
  namespace: nyte-prod
spec:
  hosts:
    - "auth.nytesoftware.com"
  gateways:
    - auth-nytesoftware-com-gateway
  http:
    - route:
        - destination:
            port:
              number: 80
            host: nyte-auth
